1.0.0
 * Fix bulk writing when using identifiers that need quotes (CASSANDRA-19031)
 * Fix bulk reading when using identifiers that need quotes (CASSANDRA-19024)
 * Remove unused dead code (CASSANDRA-19148)
 * Get Sidecar port through CassandraContext for more flexibility (CASSANDRA-19903)
 * Log start-up validation result to a single report (CASSANDRA-18916)
 * Use in-jvm dtest framework from Sidecar for testing (CASSANDRA-18759)
 * Cassandra Analytics Start-Up Validation (CASSANDRA-18810)
 * Expose per partition on-disk usage through new DataFrame that utilizes the Index.db SSTable file components (CASSANDRA-18683)
 * Fix bulk writes with Buffered RowBufferMode (CASSANDRA-18692)
 * Minor Refactoring to Improve Code Reusability (CASSANDRA-18684)
 * Fix cassandra-analytics-core-example (CASSANDRA-18662)
 * Added caching of Node Settings to improve efficiency (CASSANDRA-18633)
 * Upgrade to JUnit 5 (CASSANDRA-18599)
 * Add support for TTL & Timestamps for bulk writes (CASSANDRA-18605)
 * Add circleci configuration yaml for Cassandra Analytics (CASSANDRA-18578)
 * Provide a SecretsProvider interface to abstract the secret provisioning (CASSANDRA-18545)
 * Add the .asf.yaml file (CASSANDRA-18548)